# dangle-destroyer

./: .gitignore  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
lambda/: Cargo.toml
lambda/src/: aws.rs  main.rs
lib/: getBuildConfig.ts  main.ts
lib/stacks/: DangleDestroyerStack.ts
