[package]
name = "dangle_destroyer"
version = "0.1.0"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.49.0"
aws-sdk-route53 = "0.19.0"
lambda_runtime = "0.6.1"
log = "^0.4"
serde = "1.0.145"
serde_json = "1.0.85"
simple_logger = "^1"
tokio = "1.21.2"
tokio-stream = "0.1.10"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
